--- a/frontEnd/Select Option.html
+++ b/frontEnd/Select Option.html
@@ -14,7 +14,7 @@
 <li><a href="intro.html" id="home">Home</a></li>
 <li><a href="Account.html" id="account">Account</a></li>
 <li><a href="Contact.html" id="contact">Contact Us</a></li>
-<li><a href="Login.html" id="logout">Log Out</a></li>
+<li><a href="login.html" id="logout">Log Out</a></li>
 </ul>
 </body>
 </html>
