--- a/frontEnd/login.html
+++ b/frontEnd/login.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="login.css">
 <script src="login.js"></script>
 </head>
-<body a link="gray" vlink="orange">
+<body>
 <form>
 <div class="form-box">
 <h1>Login</h1>
