--- a/frontEnd/Owner.html
+++ b/frontEnd/Owner.html
@@ -8,7 +8,7 @@
 <body>
 <form action="Register.html">
 <div class="form-box">
-<h1>Add Details</h1>
+<h1>Details</h1>
 <div class="input-select">
 <p>State:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <select name="state">
