--- a/frontEnd/intro.html
+++ b/frontEnd/intro.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="intro.css">
   </head>
    <body>
-    <h2>Home Rentals.in</h2>
+    <h2>Home Rentals</h2>
      <form action="login.html">
     <input type="submit" value="Continue towards better lifestyle" id="button"/>
     </form>
