--- a/frontEnd/Signup.html
+++ b/frontEnd/Signup.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="signup.css">
 <script src="signup.js"></script>
 </head>
-<body a link="gray" vlink="orange">
+<body>
 <form action="/create-account" method="POST">
 <div class="form-box">
 <h1>Sign up</h1>
@@ -46,7 +46,7 @@
 </div>
 <input type="submit" value="Create acount" id="button"/>
 </form>
-<p><a href="Login.html">back</a></p>
+<p><a href="login.html">back</a></p>
 <h2><a href="intro.html">HOME</a></h2>
 </div>
 
