--- a/frontEnd/login.html
+++ b/frontEnd/login.html
@@ -6,7 +6,7 @@
 <script src="login.js"></script>
 </head>
 <body>
-<form>
+<form action="/find-account" method="POST">
 <div class="form-box">
 <h1>Login</h1>
 
@@ -22,7 +22,7 @@
 <i id="hide2" class="fa fa-eye-slash" style="color:orange;"></i>
 </span>
 </div>
-<input type="submit" value="Login" id="button" onclick="sendValues()"/>
+<input type="submit" value="Login" id="button"/>
 </form>
 <p><a href="Signup.html">New User</a></p>
 <h2><a href="intro.html">HOME</a></h2>
