--- a/frontEnd/Signup.html
+++ b/frontEnd/Signup.html
@@ -46,7 +46,7 @@
 </div>
 <input type="submit" value="Create acount" id="button"/>
 </form>
-<p><a href="login.html">back</a></p>
+<p><a href="login.html">LOGIN</a></p>
 <h2><a href="intro.html">HOME</a></h2>
 </div>
 
