--- a/public/Contact.html
+++ b/public/Contact.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Contact Us</title>
-<link rel="stylesheet" href="contact.css">
+<link rel="stylesheet" href="/css/contact.css">
 </head>
 <body>
 <h1>Email: prashanth.dussa05@gmail.com</h1>
