--- a/public/Signup.html
+++ b/public/Signup.html
@@ -2,8 +2,8 @@
 <head>
 <title>Sign up page</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="signup.css">
-<script src="signup.js"></script>
+<link rel="stylesheet" href="/css/signup.css">
+<script src="/js/signup.js"></script>
 </head>
 <body>
 <form action="/create-account" method="POST">
