--- a/public/login.html
+++ b/public/login.html
@@ -2,8 +2,8 @@
 <head>
 <title>Login page</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="login.css">
-<script src="login.js"></script>
+<link rel="stylesheet" type="text/css" href="/css/login.css">
+<script src="/js/login.js"></script>
 </head>
 <body>
 <form action="/find-account" method="POST"> 
