--- a/public/noUser.html
+++ b/public/noUser.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>User doesn't exist</title>
-<link rel="stylesheet" href="status.css">
+<link rel="stylesheet" href="/css/status.css">
 </head>
 <body>
 <h1>User doesn't exists!!</h1>
