--- a/public/OwnerRegistered.html
+++ b/public/OwnerRegistered.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Registered Succesfully</title>
-<link rel="stylesheet" href="status.css">
+<link rel="stylesheet" href="/css/status.css">
 </head>
 <body>
 <h1>SUCCESS!!</h1>
