--- a/public/intro.html
+++ b/public/intro.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Home Rentals</title>
-    <link rel="stylesheet" type="text/css" href="intro.css">
+    <link rel="stylesheet" type="text/css" href="/css/intro.css">
   </head>
    <body>
     <h2>Home Rentals</h2>
