--- a/public/invalidPassword.html
+++ b/public/invalidPassword.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Incorrect Password</title>
-<link rel="stylesheet" href="status.css">
+<link rel="stylesheet" href="/css/status.css">
 </head>
 <body>
 <h1>Incorrect password!!</h1>
