--- a/public/userExists.html
+++ b/public/userExists.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>User exists</title>
-<link rel="stylesheet" href="status.css">
+<link rel="stylesheet" href="/css/status.css">
 </head>
 <body>
 <h1>Email or Phone number is already registered!!</h1>
