--- a/public/addressRegistered.html
+++ b/public/addressRegistered.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Registered Succesfully</title>
+<title> Address Registered Succesfully</title>
 <link rel="stylesheet" href="/css/status.css">
 </head>
 <body>
