--- a/public/noHomes.html
+++ b/public/noHomes.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="/css/status.css">
 </head>
 <body>
-<h1>No house for rent!!</h1>
+<h1>No houses are available!!</h1>
 <form action="/tenant" method="GET">
 <input type="submit" value="Try Again" id="button"/>
 </form>
