--- a/public/Contact.html
+++ b/public/Contact.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="/css/contact.css">
 </head>
 <body>
-<h1>Email: prashanth.dussa05@gmail.com</h1>
-<h2>Mobile Number: 7032981227</h2>
+<h1>Email: <span>prashanth.dussa05@gmail.com</span></h1>
+<h2>Mobile Number: <span>7032981227</span></h2>
 </body>
 </html>
