--- a/public/intro.html
+++ b/public/intro.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Home Rentals</title>
+    <meta name="viewport" content="width="device-width,intial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/css/intro.css">
   </head>
    <body>
