--- a/public/Contact.html
+++ b/public/Contact.html
@@ -2,6 +2,7 @@
 <head>
 <title>Contact Us</title>
 <link rel="stylesheet" href="/css/contact.css">
+ <meta name="viewport" content="width="device-width,intial-scale=1.0">
 </head>
 <body>
 <h1>Email: <span>prashanth.dussa05@gmail.com</span></h1>
