--- a/public/Signup.html
+++ b/public/Signup.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>Sign up page</title>
+ <meta name="viewport" content="width="device-width,intial-scale=1.0">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="/css/signup.css">
 <script src="/js/signup.js"></script>
