--- a/public/invalidPassword.html
+++ b/public/invalidPassword.html
@@ -2,6 +2,7 @@
 <head>
 <title>Incorrect Password</title>
 <link rel="stylesheet" href="/css/status.css">
+ <meta name="viewport" content="width="device-width,intial-scale=1.0">
 </head>
 <body>
 <h1>Incorrect password!!</h1>
