--- a/public/noUser.html
+++ b/public/noUser.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>User doesn't exist</title>
+ <meta name="viewport" content="width="device-width,intial-scale=1.0">
 <link rel="stylesheet" href="/css/status.css">
 </head>
 <body>
