--- a/public/intro.html
+++ b/public/intro.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="/css/intro.css">
   </head>
    <body>
-    <h2>Home Rentalsss</h2>
+    <h2>Home Rentals</h2>
      <form action="login.html">
     <input type="submit" value="Continue towards better lifestyle" id="button"/>
     </form>
