--- a/public/intro.html
+++ b/public/intro.html
@@ -3,6 +3,7 @@
     <title>Home Rentals</title>
     <meta name="viewport" content="width="device-width,intial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/css/intro.css">
+    <link rel="icon" href="favicon.png" type="image/png">
   </head>
    <body>
     <h2>Home Rentals</h2>
