--- a/public/Contact.html
+++ b/public/Contact.html
@@ -3,6 +3,7 @@
     <title>Contact Us</title>
     <link rel="stylesheet" href="/css/contact.css" />
     <meta name="viewport" content="width="device-width,intial-scale=1.0">
+        <link rel="icon" href="icon.png" type="image/png">
   </head>
   <body>
     <h1>Email: <span>prashanth.dussa05@gmail.com</span></h1>
