--- a/public/Signup.html
+++ b/public/Signup.html
@@ -4,6 +4,7 @@
  <meta name="viewport" content="width="device-width,intial-scale=1.0">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="/css/signup.css">
+    <link rel="icon" href="icon.png" type="image/png">
 <script src="/js/signup.js"></script>
 </head>
 <body>
