--- a/public/noAddress.html
+++ b/public/noAddress.html
@@ -3,6 +3,7 @@
 <title>No Address found</title>
  <meta name="viewport" content="width="device-width,intial-scale=1.0">
 <link rel="stylesheet" href="/css/status.css">
+                                                 <link rel="icon" href="icon.png" type="image/png">
 </head>
 <body>
 <h1>No address found!!</h1>
