--- a/public/login.html
+++ b/public/login.html
@@ -14,7 +14,7 @@
 
 <div class="input-box">
 <i class="fa fa-envelope" style="color:orange;"></i>
-<input type="email" placeholder="Email" name="email" id="myEmail" required>
+<input type="email" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;" placeholder="Email" name="email" id="myEmail" required>
 </div>
 <div class="input-box">
 <i class="fa fa-key" style="color:orange;"></i>
