--- a/public/login.html
+++ b/public/login.html
@@ -18,7 +18,7 @@
 </div>
 <div class="input-box">
 <i class="fa fa-key" style="color:orange;"></i>
-<input type="password" placeholder="Enter Password(min 6 characters)" id="myInput" name="password" minlength="6" required>
+<input type="password" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;" placeholder="Enter Password(min 6 characters)" id="myInput" name="password" minlength="6" required>
 <span class="eye" onclick="myFunction()">
 <i id="hide1" class="fa fa-eye" style="color:orange;"></i>
 <i id="hide2" class="fa fa-eye-slash" style="color:orange;"></i>
