--- a/public/Contact.html
+++ b/public/Contact.html
@@ -1,12 +1,12 @@
 <html>
-  <head>
-    <title>Contact Us</title>
-    <link rel="stylesheet" href="/css/contact.css" />
-    <meta name="viewport" content="width="device-width,intial-scale=1.0">
-    <link rel="icon" href="icon.png" type="image/png">
-  </head>
-  <body>
-    <h1>Email: <span>prashanth.dussa05@gmail.com</span></h1>
-    <h2>Mobile Number: <span>7032981227</span></h2>
-  </body>
+     <head>
+          <title>Contact Us</title>
+          <link rel="stylesheet" href="/css/contact.css" />
+          <meta name="viewport" content="width="device-width,intial-scale=1.0">
+          <link rel="icon" href="icon.png" type="image/png" />
+     </head>
+     <body>
+          <h1>Email: <span>prashanth.dussa05@gmail.com</span></h1>
+          <h2>Mobile Number: <span>7032981227</span></h2>
+     </body>
 </html>
