--- a/public/intro.html
+++ b/public/intro.html
@@ -1,14 +1,18 @@
 <html>
-  <head>
-    <title>Home Rentals</title>
-    <meta name="viewport" content="width="device-width,intial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/css/intro.css">
-    <link rel="icon" href="icon.png" type="image/png">
-  </head>
-   <body>
-    <h2>Home Rentals</h2>
-     <form action="login.html">
-    <input type="submit" value="Continue towards better lifestyle" id="button"/>
-    </form>
-   </body>
+     <head>
+          <title>Home Rentals</title>
+          <meta name="viewport" content="width="device-width,intial-scale=1.0">
+          <link rel="stylesheet" type="text/css" href="/css/intro.css" />
+          <link rel="icon" href="icon.png" type="image/png" />
+     </head>
+     <body>
+          <h2>Home Rentals</h2>
+          <form action="login.html">
+               <input
+                    type="submit"
+                    value="Continue towards better lifestyle"
+                    id="button"
+               />
+          </form>
+     </body>
 </html>
