--- a/public/invalidCurrentPassword.html
+++ b/public/invalidCurrentPassword.html
@@ -1,14 +1,14 @@
 <html>
-<head>
-<title>Incorrect password</title>
- <meta name="viewport" content="width="device-width,intial-scale=1.0">
-<link rel="stylesheet" href="/css/status.css">
-<link rel="icon" href="icon.png" type="image/png">
-</head>
-<body>
-<h1>Your current password is incorrect !!</h1>
-<form action="/changePassword" method="GET">
-<input type="submit" value="Try again" id="button"/>
-</form>
-</body>
+     <head>
+          <title>Incorrect password</title>
+          <meta name="viewport" content="width="device-width,intial-scale=1.0">
+          <link rel="stylesheet" href="/css/status.css" />
+          <link rel="icon" href="icon.png" type="image/png" />
+     </head>
+     <body>
+          <h1>Your current password is incorrect !!</h1>
+          <form action="/changePassword" method="GET">
+               <input type="submit" value="Try again" id="button" />
+          </form>
+     </body>
 </html>
