--- a/public/invalidPassword.html
+++ b/public/invalidPassword.html
@@ -1,14 +1,14 @@
 <html>
-<head>
-<title>Incorrect Password</title>
-<link rel="stylesheet" href="/css/status.css">
- <meta name="viewport" content="width="device-width,intial-scale=1.0">
-<link rel="icon" href="icon.png" type="image/png">
-</head>
-<body>
-<h1>Incorrect password!!</h1>
-<form action="login.html">
-<input type="submit" value="Login Again" id="button"/>
-</form>
-</body>
+     <head>
+          <title>Incorrect Password</title>
+          <link rel="stylesheet" href="/css/status.css" />
+          <meta name="viewport" content="width="device-width,intial-scale=1.0">
+          <link rel="icon" href="icon.png" type="image/png" />
+     </head>
+     <body>
+          <h1>Incorrect password!!</h1>
+          <form action="login.html">
+               <input type="submit" value="Login Again" id="button" />
+          </form>
+     </body>
 </html>
