--- a/public/login.html
+++ b/public/login.html
@@ -14,15 +14,15 @@
 <h1>Login</h1>
 
 <div class="input-box">
-<i class="fa fa-envelope" style="color:orange;"></i>
+<i class="fa fa-envelope" style="color:orange; font-size: 20px;"></i>
 <input type="email" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;" placeholder="Email" name="email" id="myEmail" required>
 </div>
 <div class="input-box">
-<i class="fa fa-key" style="color:orange;"></i>
+<i class="fa fa-key" style="color:orange; font-size: 20px;"></i>
 <input type="password" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;" placeholder="Enter Password(min 6 characters)" id="myInput" name="password" minlength="6" required>
 <span class="eye" onclick="myFunction()">
-<i id="hide1" class="fa fa-eye" style="color:orange;"></i>
-<i id="hide2" class="fa fa-eye-slash" style="color:orange;"></i>
+<i id="hide1" class="fa fa-eye" style="color:orange; font-size: 20px;"></i>
+<i id="hide2" class="fa fa-eye-slash" style="color:orange; font-size: 20px;"></i>
 </span>
 </div>
 <input type="submit" value="Login" id="button"/>
