--- a/public/intro.html
+++ b/public/intro.html
@@ -10,7 +10,7 @@
           <form action="login.html">
                <input
                     type="submit"
-                    value="Continue -→"
+                    value="Continue⇨"
                     id="button"
                />
           </form>
