--- a/public/intro.html
+++ b/public/intro.html
@@ -1,8 +1,9 @@
 <html>
      <head>
           <title>Home Rentals</title>
-          <meta name="viewport" content="width="device-width,intial-scale=1.0">
-          <link rel="stylesheet" type="text/css" href="/css/intro.css" />
+          <meta name="viewport" content="width=device-width,intial-scale=1.0">
+          <link rel="stylesheet" media="screen and (min-width: 500px)" type="text/css" href="/css/intro.css" />
+          <link rel="stylesheet" media="screen and (max-width: 499px)" type="text/css" href="/css/mintro.css" />
           <link rel="icon" href="icon.png" type="image/png" />
      </head>
      <body>
