--- a/public/login.html
+++ b/public/login.html
@@ -15,11 +15,11 @@
 
 <div class="input-box">
 <i class="fa fa-envelope"></i>&nbsp;
-<input type="email" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 20px;" placeholder="email" name="email" id="myEmail" required>
+<input type="email" placeholder="email" name="email" id="myEmail" required>
 </div>
 <div class="input-box">
 <i class="fa fa-key"></i>&nbsp;
-<input type="password" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 20px;" placeholder="password ( min 6 characters )" id="myInput" name="password" minlength="6" required>
+<input type="password" placeholder="password ( min 6 characters )" id="myInput" name="password" minlength="6" required>
 <span class="eye" onclick="myFunction()">
 <i id="hide1" class="fa fa-eye" style="color:orange; font-size: 20px;"></i>
 <i id="hide2" class="fa fa-eye-slash" style="color:orange; font-size: 20px;"></i>
