--- a/public/login.html
+++ b/public/login.html
@@ -21,8 +21,8 @@
 <i class="fa fa-key"></i>&nbsp;
 <input type="password" placeholder="password ( min 6 characters )" id="myInput" name="password" minlength="6" required>
 <span class="eye" onclick="myFunction()">
-<i id="hide1" class="fa fa-eye" style="color:orange; font-size: 20px;"></i>
-<i id="hide2" class="fa fa-eye-slash" style="color:orange; font-size: 20px;"></i>
+<i id="hide1" class="fa fa-eye"></i>
+<i id="hide2" class="fa fa-eye-slash"></i>
 </span>
 </div>
 <input type="submit" value="Login" id="button"/>
