--- a/public/Signup.html
+++ b/public/Signup.html
@@ -13,23 +13,23 @@
 <div class="form-box">
 <h1>Sign up</h1>
 <div class="input-box">
-<i class="fa fa-user-circle" style="color:orange;"></i>
+<i class="fa fa-user-circle" style="color:orange;"></i>&nbsp;
 <input type="text" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 20px;" placeholder="First Name" name="firstName" required>
 </div>
 <div class="input-box">
-<i class="fa fa-user-circle" style="color:orange;"></i>
+<i class="fa fa-user-circle" style="color:orange;"></i>&nbsp;
 <input type="text" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 20px;" placeholder="Last name" name="lastName" required>
 </div>
 <div class="input-box">
-<i class="fa fa-envelope" style="color:orange;"></i>
+<i class="fa fa-envelope" style="color:orange;"></i>&nbsp;
 <input type="email" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 20px;" placeholder="Email" name="email" required>
 </div>
 <div class="input-box">
-<i class="fa fa-mobile" style="font-size:23px;color:orange;"></i>
+<i class="fa fa-mobile" style="font-size:23px;color:orange;"></i>&nbsp;
 <input type="text" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 20px;" placeholder="Mobile Number(10 digit only)" name="phoneNumber" pattern="[0-9]{10}" maxlength="10" required>
 </div>
 <div class="input-box">
-<i class="fa fa-key" style="color:orange;"></i>
+<i class="fa fa-key" style="color:orange;"></i>&nbsp;
 <input type="password" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 20px;" placeholder="Password ( min 6 characters )" id="myInput" name="password" minlength="6" required>
 <span class="eye" onclick="myFunction()">
 <i id="hide1" class="fa fa-eye" style="color:orange;"></i>
@@ -44,7 +44,7 @@
 </select>
 </p>
 <div class="input-box">
-<i class="fa fa-hand-o-right" style="color:orange;"></i>
+<i class="fa fa-hand-o-right" style="color:orange;"></i>&nbsp;
 <input type="text" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 20px;" placeholder="Security answer" name="securityAnswer" required>
 </div>
 <input type="submit" value="Create acount" id="button"/>
