--- a/public/login.html
+++ b/public/login.html
@@ -2,7 +2,7 @@
 <head>
 <title>Login page</title>
  <meta name="viewport" content="width=device-width, intial-scale=1.0">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+/*<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">*/
 <link rel="stylesheet" media="screen and (min-width: 500px)" type="text/css" href="/css/login.css">
 <link rel="stylesheet" media="screen and (max-width: 499px)" type="text/css" href="/css/mlogin.css">
 <link rel="icon" href="icon.png" type="image/png">
