--- a/public/login.html
+++ b/public/login.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 <title>Login page</title>
- <meta name="viewport" content="width=device-width, intial-scale=1.0">
- <!--  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+<meta name="viewport" content="width=device-width, intial-scale=1.0">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" media="screen and (min-width: 500px)" type="text/css" href="/css/login.css">
 <link rel="stylesheet" media="screen and (max-width: 499px)" type="text/css" href="/css/mlogin.css">
 <link rel="icon" href="icon.png" type="image/png">
@@ -14,15 +14,15 @@
 <h1>Login</h1>
 
 <div class="input-box">
-<i class="fa fa-envelope" style="color: orange;"></i>&nbsp;
+<i class="fa fa-envelope" style="color: white;"></i>&nbsp;
 <input type="email" placeholder="email" name="email" id="myEmail" required>
 </div>
 <div class="input-box">
-<i class="fa fa-key" style="color: orange;"></i>&nbsp;
+<i class="fa fa-key" style="color: white;"></i>&nbsp;
 <input type="password" placeholder="password ( min 6 characters )" id="myInput" name="password" minlength="6" required>
 <span class="eye" onclick="myFunction()">
-<i id="hide1" class="fa fa-eye" style="color: orange;"></i>
-<i id="hide2" class="fa fa-eye-slash" style="color: orange;"></i>
+<i id="hide1" class="fa fa-eye" style="color: white;"></i>
+<i id="hide2" class="fa fa-eye-slash" style="color: white;"></i>
 </span>
 </div>
 <input type="submit" value="Login" id="button"/>
