--- a/public/login.html
+++ b/public/login.html
@@ -14,15 +14,15 @@
 <h1>Login</h1>
 
 <div class="input-box">
-<i class="fa fa-envelope" style="color: white;"></i>&nbsp;
+<i class="fa fa-envelope" style="color: orange;"></i>&nbsp;
 <input type="email" placeholder="email" name="email" id="myEmail" required>
 </div>
 <div class="input-box">
-<i class="fa fa-key" style="color: white;"></i>&nbsp;
+<i class="fa fa-key" style="color: orange;"></i>&nbsp;
 <input type="password" placeholder="password ( min 6 characters )" id="myInput" name="password" minlength="6" required>
 <span class="eye" onclick="myFunction()">
-<i id="hide1" class="fa fa-eye" style="color: white;"></i>
-<i id="hide2" class="fa fa-eye-slash" style="color: white;"></i>
+<i id="hide1" class="fa fa-eye" style="color: orange;"></i>
+<i id="hide2" class="fa fa-eye-slash" style="color: orange;"></i>
 </span>
 </div>
 <input type="submit" value="Login" id="button"/>
