--- a/public/Signup.html
+++ b/public/Signup.html
@@ -49,7 +49,7 @@
 </div>
 <input type="submit" value="Create acount" id="button"/>
 </form>
-<p><a href="login.html">LOGIN</a></p>
+<h3><a href="login.html">LOGIN</a></h3>
 <h2><a href="intro.html">HOME</a></h2>
 <br/>
 </div>
