--- a/public/intro.html
+++ b/public/intro.html
@@ -7,13 +7,20 @@
           <link rel="icon" href="icon.png" type="image/png" />
      </head>
      <body>
-          <h2>Home Rentals</h2>
-          <form action="login.html">
-               <input
-                    type="submit"
-                    value="Continue"
-                    id="button"
-               />
-          </form>
+          div class="section">
+               <div class="video-container">
+                    <video autoplay loop muted>
+                         <source src="back.mp4" type="video/mp4" />
+                    </video>
+               </div>
+               <h2>Home Rentals</h2>
+               <form action="login.html">
+                    <input
+                         type="submit"
+                         value="Continue towards better lifestyle"
+                         id="button"
+                    />
+               </form>
+          </div>
      </body>
 </html>
