--- a/public/intro.html
+++ b/public/intro.html
@@ -10,7 +10,7 @@
           div class="section">
                <div class="video-container">
                     <video autoplay loop muted>
-                         <source src="back.mp4" type="video/mp4" />
+                         <source src="/css/back.mp4" type="video/mp4" />
                     </video>
                </div>
                <h2>Home Rentals</h2>
