--- a/public/intro.html
+++ b/public/intro.html
@@ -7,7 +7,7 @@
           <link rel="icon" href="icon.png" type="image/png" />
      </head>
      <body>
-          div class="section">
+          <div class="section">
                <div class="video-container">
                     <video autoplay loop muted>
                          <source src="/css/back.mp4" type="video/mp4" />
