--- a/public/intro.html
+++ b/public/intro.html
@@ -17,7 +17,7 @@
                <form action="login.html">
                     <input
                          type="submit"
-                         value="Continue towards better lifestyle"
+                         value="Continue"
                          id="button"
                     />
                </form>
