--- a/public/Contact.html
+++ b/public/Contact.html
@@ -2,7 +2,7 @@
      <head>
           <title>Contact Us</title>
          <meta name="viewport" content="width=device-width,intial-scale=1.0">
-          <link rel="stylesheet" media="screen and (min-width: 500px)" type="text/css" href="/css/mcontact.css" />
+          <link rel="stylesheet" media="screen and (min-width: 500px)" type="text/css" href="/css/contact.css" />
           <link rel="stylesheet" media="screen and (max-width: 499px)" type="text/css" href="/css/mcontact.css" />
           <meta name="viewport" content="width="device-width,intial-scale=1.0">
           <link rel="icon" href="icon.png" type="image/png" />
