--- a/public/login.html
+++ b/public/login.html
@@ -19,7 +19,7 @@
 </div>
 <div class="input-box">
 <i class="fa fa-key" style="color: orange;"></i>&nbsp;
-<input type="password" placeholder="password ( min 6 characters )" id="myInput" name="password" minlength="6" required><br/>
+<input type="password" placeholder="password ( min 6 characters )" id="myInput" name="password" minlength="6" required>&nbsp;&nbsp;
 <span class="eye" onclick="myFunction()">
 <i id="hide1" class="fa fa-eye" style="color: orange;"></i>
 <i id="hide2" class="fa fa-eye-slash" style="color: orange;"></i>
