--- a/public/Contact.html
+++ b/public/Contact.html
@@ -7,7 +7,7 @@
           <link rel="icon" href="icon.png" type="image/png" />
      </head>
      <body>
-          <h1>Email: <span>prashanth.dussa05@gmail.com</span></h1>
-          <h2>Mobile Number: <span>7032981227</span></h2>
+          <h1><span>prashanth.dussa05@gmail.com</span></h1>
+          <h2><span>7032981227</span></h2>
      </body>
 </html>
