--- a/public/login.html
+++ b/public/login.html
@@ -1,35 +1,93 @@
-<html>
-<head>
-<title>Login page</title>
-<meta name="viewport" content="width=device-width, intial-scale=1.0">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" media="screen and (min-width: 500px)" type="text/css" href="/css/login.css">
-<link rel="stylesheet" media="screen and (max-width: 499px)" type="text/css" href="/css/mlogin.css">
-<link rel="icon" href="icon.png" type="image/png">
-<script src="/js/login.js"></script>
-</head>
-<body>
-<form action="/find-account" method="POST"> 
-<div class="form-box">
-<h1>Login</h1>
-
-<div class="input-box">
-<i class="fa fa-envelope" style="color: orange;"></i>&nbsp;
-<input type="email" placeholder="email" name="email" id="myEmail" required>
-</div>
-<div class="input-box">
-<i class="fa fa-key" style="color: orange;"></i>&nbsp;
-<input type="password" placeholder="password ( min 6 characters )" id="myInput" name="password" minlength="6" required>&nbsp;&nbsp;
-<span class="eye" onclick="myFunction()">
-<i id="hide1" class="fa fa-eye" style="color: orange;"></i>
-<i id="hide2" class="fa fa-eye-slash" style="color: orange;"></i>
-</span>
-</div>
-<input type="submit" value="Login" id="button"/>
-</form>
-<p><a href="Signup.html">New User</a></p>
-<h2><a href="intro.html">HOME</a></h2>
-</div>
-  
-</body>
+<!DOCTYPE html>
+<html lang="en">
+     <head>
+          <meta charset="UTF-8" />
+          <meta
+               name="viewport"
+               content="width=device-width, initial-scale=1.0"
+          />
+          <title>Test</title>
+          <link
+               rel="stylesheet"
+               href="https://fonts.googleapis.com/css?family=Karla|Goldman|Poppins|Nunito"
+          />
+          <link
+               rel="stylesheet"
+               href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+          />
+          <script src="test.js"></script>
+          <link
+               rel="stylesheet"
+               media="screen and (min-width: 500px)"
+               type="text/css"
+               href="/css/login.css"
+          />
+          <link
+               rel="stylesheet"
+               media="screen and (max-width: 499px)"
+               type="text/css"
+               href="/css/mlogin.css"
+          />
+     </head>
+     <body>
+          <div class="container">
+               <div class="login-box">
+                    <form action="/find-account" method="POST">
+                         <h1>Login</h1>
+                         <br />
+                         <div class="input-box">
+                              <h2>Username</h2>
+                              <i class="fa fa-envelope icon"></i>
+                              <input
+                                   type="email"
+                                   placeholder="email"
+                                   id="myEmail"
+                                   required
+                              /><br />
+                              <h2>Password</h2>
+                              <i class="fa fa-lock icon"></i>
+                              <input
+                                   type="password"
+                                   placeholder="password"
+                                   id="myInput"
+                                   required
+                              />
+                              <span class="eye" onclick="myFunction()">
+                                   <i
+                                        id="hide1"
+                                        class="far fa-eye"
+                                        style="
+                                             color: white;
+                                             padding-left: 5px;
+                                             padding-top: 5px;
+                                        "
+                                   ></i>
+                                   <i
+                                        id="hide2"
+                                        class="fa fa-eye-slash"
+                                        style="
+                                             color: white;
+                                             padding-left: 5px;
+                                             padding-top: 5px;
+                                        "
+                                   ></i> </span
+                              ><br /><br /><br />
+                              <input type="submit" value="Login" id="button" />
+                         </div>
+                    </form>
+               </div>
+               <div class="signup-box">
+                    <div class="child">
+                         <h2>New User?</h2>
+                         <form action="/Signup.html">
+                              <input
+                                   type="submit"
+                                   value="Sign up"
+                                   id="button1"
+                              />
+                         </form>
+                    </div>
+               </div>
+          </div>
+     </body>
 </html>
