--- a/public/login.html
+++ b/public/login.html
@@ -6,7 +6,7 @@
                name="viewport"
                content="width=device-width, initial-scale=1.0"
           />
-          <title>Test</title>
+          <title>Login</title>
           <link
                rel="stylesheet"
                href="https://fonts.googleapis.com/css?family=Karla|Goldman|Poppins|Nunito"
@@ -15,7 +15,8 @@
                rel="stylesheet"
                href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
           />
-          <script src="test.js"></script>
+          <link rel="icon" href="icon.png" type="image/png" />
+          <script src="/js/login.js"></script>
           <link
                rel="stylesheet"
                media="screen and (min-width: 500px)"
