--- a/public/login.html
+++ b/public/login.html
@@ -39,17 +39,13 @@
                          <div class="input-box">
                               <h2>Username</h2>
                               <i class="fa fa-envelope icon"></i>
-                              <input
-                                   type="email"
-                                   placeholder="email"
-                                   id="myEmail"
-                                   required
-                              /><br />
+                              <input type="email" placeholder="email" name="email" id="myEmail" required/>
+                              <br />
                               <h2>Password</h2>
                               <i class="fa fa-lock icon"></i>
                               <input
                                    type="password"
-                                   placeholder="password"
+                                   placeholder="password" name="password" minlength="6"
                                    id="myInput"
                                    required
                               />
