--- a/public/login.html
+++ b/public/login.html
@@ -70,20 +70,9 @@
                                    ></i> </span
                               ><br /><br /><br />
                               <input type="submit" value="Login" id="button" />
+                              <a href="Signup.html">New User?</a>
                          </div>
                      </form>
-               </div>
-               <div class="signup-box">
-                    <div class="child">
-                         <h2>New User?</h2>
-                         <form action="/Signup.html">
-                              <input
-                                   type="submit"
-                                   value="Sign up"
-                                   id="button1"
-                              />
-                         </form>
-                    </div>
                </div>
           </div>
      </body>
