--- a/public/login.html
+++ b/public/login.html
@@ -69,7 +69,7 @@
                                         "
                                    ></i> </span
                               ><br /><br /><br />
-                              <input type="submit" value="Login" id="button" />
+                              <input type="submit" value="Login" id="button" />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                               <a href="Signup.html">New User?</a>
                          </div>
                      </form>
