--- a/public/Signup.html
+++ b/public/Signup.html
@@ -95,7 +95,7 @@
                               <i class="fas fa-phone-alt icon"></i>
                               <input
                                    type="text"
-                                   placeholder="Mobile Number(10 digit only)"
+                                   placeholder="Mobile Number"
                                    name="phoneNumber"
                                    pattern="[0-9]{10}"
                                    maxlength="10"
