--- a/public/login.html
+++ b/public/login.html
@@ -9,7 +9,7 @@
           <title>Login</title>
           <link
                rel="stylesheet"
-               href="https://fonts.googleapis.com/css?family=Poppins&effect=fire"
+               href="https://fonts.googleapis.com/css?family=Poppins&effect=anaglyph"
           />
           <link
                rel="stylesheet"
