--- a/public/login.html
+++ b/public/login.html
@@ -9,7 +9,7 @@
           <title>Login</title>
           <link
                rel="stylesheet"
-               href="https://fonts.googleapis.com/css?family=Poppins&effect=anaglyph"
+               href="https://fonts.googleapis.com/css?family=Poppins&effect=anaglyph|shadow-multiple|outline"
           />
           <link
                rel="stylesheet"
@@ -34,7 +34,7 @@
           <div class="container">
                <div class="login-box">
                     <form action="/find-account" method="POST">
-                         <h1 class="font-effect-anaglyph">Login</h1>
+                         <h1 class="font-effect-shadow-multiple">Login</h1>
                          <br />
                          <div class="input-box">
                               <h2>Username</h2>
