--- a/public/intro.html
+++ b/public/intro.html
@@ -2,6 +2,10 @@
      <head>
           <title>Home Rentals</title>
           <meta name="viewport" content="width=device-width,intial-scale=1.0">
+           <link
+               rel="stylesheet"
+               href="https://fonts.googleapis.com/css?family=Poppins|Goldman&effect=anaglyph|shadow-multiple|outline|neon|fire"
+          />
           <link rel="stylesheet" media="screen and (min-width: 500px)" type="text/css" href="/css/intro.css" />
           <link rel="stylesheet" media="screen and (max-width: 499px)" type="text/css" href="/css/mintro.css" />
           <link rel="icon" href="icon.png" type="image/png" />
@@ -13,7 +17,7 @@
                          <source src="/css/back.mp4" type="video/mp4" />
                     </video>
                </div>
-               <h2>Home Rentals</h2>
+               <h2 class="font-effect anaglyph">Home Rentals</h2>
                <form action="login.html">
                     <input
                          type="submit"
