--- a/public/intro.html
+++ b/public/intro.html
@@ -17,7 +17,7 @@
                          <source src="/css/back.mp4" type="video/mp4" />
                     </video>
                </div>
-               <h2 class="font-effect fire">Home Rentals</h2>
+               <h2 class="font-effect-fire">Home Rentals</h2>
                <form action="login.html">
                     <input
                          type="submit"
