--- a/public/intro.html
+++ b/public/intro.html
@@ -1,29 +1,36 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
      <head>
-          <title>Home Rentals</title>
-          <meta name="viewport" content="width=device-width,intial-scale=1.0">
-           <link
-               rel="stylesheet"
-               href="https://fonts.googleapis.com/css?family=Poppins|Goldman&effect=anaglyph|shadow-multiple|outline|neon|fire"
+          <meta charset="UTF-8" />
+          <meta
+               name="viewport"
+               content="width=device-width, initial-scale=1.0"
           />
-          <link rel="stylesheet" media="screen and (min-width: 500px)" type="text/css" href="/css/intro.css" />
-          <link rel="stylesheet" media="screen and (max-width: 499px)" type="text/css" href="/css/mintro.css" />
-          <link rel="icon" href="icon.png" type="image/png" />
+          <title>Home Rentals</title>
+          <link
+               rel="stylesheet"
+               type="text/css"
+               media="screen and (min-width: 500px)"
+               href="/css/intro.css"
+          />
+          <link
+               rel="stylesheet"
+               type="text/css"
+               media="screen and (max-width: 499px)"
+               href="/css/mintro.css"
+          />
+          <link
+               rel="stylesheet"
+               href="https://fonts.googleapis.com/css?family=Open+Sans|Goldman&effect=anaglyph|fire"
+          />
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+          <script src="format.js"></script>
      </head>
      <body>
-          <div class="section">
-               <div class="video-container">
-                    <video autoplay loop muted>
-                         <source src="/css/back.mp4" type="video/mp4" />
-                    </video>
-               </div>
-               <h2 class="font-effect-anaglyph">Home Rentals</h2>
+          <div class="container">
+               <h2 class="font-effect-fire">HOME RENTALS</h2>
                <form action="login.html">
-                    <input
-                         type="submit"
-                         value="Continue"
-                         id="button"
-                    />
+                    <button id="button">continue</button>
                </form>
           </div>
      </body>
