--- a/public/OwnerRegistered.html
+++ b/public/OwnerRegistered.html
@@ -6,7 +6,7 @@
                name="viewport"
                content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"
           />
-          <title>Login</title>
+          <title>Address Registered</title>
           <link
                rel="stylesheet"
                href="https://fonts.googleapis.com/css?family=Poppins|Goldman|karla|Open+Sans&effect=anaglyph|shadow-multiple|outline|neon|fire|3d|wallpaper"
@@ -20,7 +20,7 @@
                rel="stylesheet"
                media="screen and (min-width: 500px)"
                type="text/css"
-               href="status.css"
+               href="/css/status.css"
           />
           <link
                rel="stylesheet"
