--- a/public/Signup.html
+++ b/public/Signup.html
@@ -118,7 +118,7 @@
                                         </option>
                                         <option>What is your Nick name?</option>
                                         <option>
-                                             What is your School name?
+                                             What is your Pet name?
                                         </option>
                                    </select>
                                    <br />
