--- a/public/setPassword.html
+++ b/public/setPassword.html
@@ -50,35 +50,8 @@
                               <i class="fa fa-envelope icon"></i>
                               <input type="email" placeholder="email" name="email" id="myEmail" required/>
                   
-                              <h2>New password</h2>
-                              <i class="fa fa-lock icon"></i>
-                              <input
-                                   type="password"
-                                   placeholder="password" name="password" minlength="6"
-                                   id="myInput"
-                                   required
-                              />
-                              <span class="eye" onclick="myFunction()">
-                                   <i
-                                        id="hide1"
-                                        class="far fa-eye"
-                                        style="
-                                             color: white;
-                                             padding-left: 5px;
-                                             padding-top: 5px;
-                                        "
-                                   ></i>
-                                   <i
-                                        id="hide2"
-                                        class="fa fa-eye-slash"
-                                        style="
-                                             color: white;
-                                             padding-left: 5px;
-                                             padding-top: 5px;
-                                        "
-                                   ></i> </span
-                              ><br /><br /><br /><br />
-                              <input type="submit" value="Reset" id="button" />
+                              <br /><br /><br /><br />
+                              <input type="submit" value="Continue" id="button" />
                          </div>
                      </form>
                </div>
