--- a/public/Contact.html
+++ b/public/Contact.html
@@ -11,6 +11,10 @@
                rel="stylesheet"
                href="https://fonts.googleapis.com/css?family=Poppins|Goldman|karla|Open+Sans&effect=anaglyph|shadow-multiple|outline|neon|fire|3d|wallpaper"
           />
+           <link
+               rel="stylesheet"
+               href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+          />
           <link rel="icon" href="icon.png" type="image/png" />
           <link
                rel="stylesheet"
@@ -41,6 +45,10 @@
                <h3>prashanth.dussa05@gmail.com</h3>
                <h2>Contact number</h2>
                <h3>7032981227</h3>
+               <br/>
+               <a href="https://www.linkedin.com/in/prashanth-dussa-00a470190/" class="fa fa-linkedin" id="linkedIn"></a>
+               <a href="https://github.com/PrashanthDussa" class="fa fa-github" id="github"></a>
+               <a href="https://www.instagram.com/prashanthdussa/" class="fa fa-instagram" id="insta"></a>
           </div>
      </body>
 </html>
