--- a/public/resetSuccess.html
+++ b/public/resetSuccess.html
@@ -6,7 +6,7 @@
                name="viewport"
                content="width=device-width, initial-scale=1.0"
           />
-          <title>Incorrect Password</title>
+          <title>Success</title>
           <link
                rel="stylesheet"
                href="https://fonts.googleapis.com/css?family=Poppins|Goldman|karla|Open+Sans&effect=anaglyph|shadow-multiple|outline|neon|fire|3d|wallpaper"
@@ -36,11 +36,10 @@
                <span class="loader"><span class="loader-inner"></span></span>
           </div>
           <div class="container">
-               <h1 class="font-effect-shadow-multiple">Incorrect Current Password</h1>
-                 <form action="/changePassword" method="GET">
-                   <input type="submit" value="Try again" id="button" />
+               <h1 class="font-effect-shadow-multiple">Success</h1>
+                <form action="login.html">
+                  <input type="submit" value="Login" id="button" />
                 </form>
           </div>
      </body>
 </html>
-
