--- a/public/setPassword.html
+++ b/public/setPassword.html
@@ -6,7 +6,7 @@
                name="viewport"
                content="width=device-width, initial-scale=1.0"
           />
-          <title>Login</title>
+          <title>Reset password</title>
           <link
                rel="stylesheet"
                href="https://fonts.googleapis.com/css?family=Poppins|Goldman|karla|Open+Sans&effect=anaglyph|shadow-multiple|outline|neon|fire"
@@ -42,44 +42,16 @@
           </div>
           <div class="container">
                <div class="login-box">
-                    <form action="/find-account" method="POST">
-                         <h1 class="font-effect-shadow-multiple">Login</h1>
+                    <form action="/setPassword" method="POST">
+                         <h1 class="font-effect-shadow-multiple">Reset Password</h1>
                          <br />
                          <div class="input-box">
                               <h2>Username</h2>
                               <i class="fa fa-envelope icon"></i>
                               <input type="email" placeholder="email" name="email" id="myEmail" required/>
-                              <br />
-                              <h2>Password</h2>
-                              <i class="fa fa-lock icon"></i>
-                              <input
-                                   type="password"
-                                   placeholder="password" name="password" minlength="6"
-                                   id="myInput"
-                                   required
-                              />
-                              <span class="eye" onclick="myFunction()">
-                                   <i
-                                        id="hide1"
-                                        class="far fa-eye"
-                                        style="
-                                             color: white;
-                                             padding-left: 5px;
-                                             padding-top: 5px;
-                                        "
-                                   ></i>
-                                   <i
-                                        id="hide2"
-                                        class="fa fa-eye-slash"
-                                        style="
-                                             color: white;
-                                             padding-left: 5px;
-                                             padding-top: 5px;
-                                        "
-                                   ></i> </span
-                              ><br /><a href="setPassword.html">Forgot password?</a><br /><br /><br />
-                              <input type="submit" value="Login" id="button" />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                              <a href="Signup.html">New User?</a>
+                  
+                              <br /><br />
+                              <input type="submit" value="Continue" id="button" />
                          </div>
                      </form>
                </div>
